--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <hr class="first-hr">
                     <p class="sub-title">Web Developer
 
-                        <i class="fa fa-code" style="font-size:48px;color:rgb(245, 245, 250)"></i>
+                        <i class="fa fa-code" style="color:rgb(245, 245, 250)"></i>
 
                     </p>
 
@@ -119,7 +119,7 @@
 
 
                     <div class="contact-buttons">
-                        <a class="social github-social" href="https://github.com/BenThom21" target="_blank"><i
+                        <a class="social github-social" href="https://github.com/tejasmachhi" target="_blank"><i
                                 class="fa fa-github" aria-hidden="true"></i></a>
                         <a class="social insta-social" href="https://www.instagram.com/tejass__2710/?hl=en"
                             target="_blank"><i class=" fa fa-instagram" aria-hidden="true"></i class=></a>
