--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 
                 <div id="contect" class="foot-head">
-                    <strong>Contect Me Around Web</strong>
+                    <strong>Contact Me Around Web</strong>
                 </div>
 
                 <div class="contect-link">
