--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         </a>
 
                         <a href=" #contect">
-                            <li class=" nav-link">Contect</li>
+                            <li class=" nav-link">Contact</li>
                         </a>
 
                     </ul>
@@ -69,7 +69,7 @@
                 </div>
                 <br>
                 <div class="work-list">
-                    <div class="work"> <a href="https://tejasmachhi.github.io/tribute-page-Git.io/">TRUBUTE PAGE</a>
+                    <div class="work"> <a href="https://tejasmachhi.github.io/tribute-page-Git.io/">TRIBUTE PAGE</a>
                     </div>
                     <div class="work"> <a href="https://tejasmachhi.github.io/form/">SURVEY FORM</a></div>
                     <div class="work"> <a href="https://tejasmachhi.github.io/flute.io.github/">PRODUCT LANDING PAGE</a>
